<resources>
    <string name="app_name">Droplet</string>
    <string name="welcome_title">Welcome to Droplet</string>
    <string name="continue_text">Continue</string>
    <string name="login_canceled">Login canceled</string>
    <string name="no_internet">No internet connection</string>
    <string name="login_failed">Login failed</string>
    <string name="details_description">Please provide your information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="error_get_user">Cannot load user</string>
    <string name="save">Save</string>
    <string name="error_update_user">Cannot update user</string>
    <string name="update_user_success">Successfully updated</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="logout">logout</string>
</resources>
